// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation: createPinger creates a pinger with frequency set to custom \`weekly\` 1`] = `
Object {
  "data": Object {
    "createPinger": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createPinger creates a pinger with price_type set to custom \`sqm\` 1`] = `
Object {
  "data": Object {
    "createPinger": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createPinger creates a pinger with region as a polygon 1`] = `
Object {
  "data": Object {
    "createPinger": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createPinger fails creating a pinger if 5 already exist 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "maxPingers": 5,
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Max amount of 5 PINGERS per email exceeded.",
      "path": Array [
        "createPinger",
      ],
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createPinger fails creating a pinger if input validation fails 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "details": Array [
          Object {
            "context": Object {
              "key": "rooms_max",
              "label": "rooms_max",
              "limit": Object {
                "adjust": null,
                "ancestor": 1,
                "depth": 1,
                "display": "ref:rooms_min",
                "in": false,
                "iterables": null,
                "key": "rooms_min",
                "map": null,
                "path": Array [
                  "rooms_min",
                ],
                "root": "rooms_min",
                "separator": ".",
                "type": "value",
              },
              "value": 5,
            },
            "message": "\\"rooms_max\\" must be greater than or equal to ref:rooms_min",
            "path": Array [
              "rooms_max",
            ],
            "type": "number.min",
          },
        ],
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Input validation failed",
      "path": Array [
        "createPinger",
      ],
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createPinger fails creating with invalid polygon 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "details": Array [
          Object {
            "context": Object {
              "key": "region",
              "label": "region",
              "value": "very wrong, 56.95892 24.17559, 56.94571 24.14812, 56.93767 24.13181",
            },
            "message": "\\"region\\" needs to be a valid polygon",
            "path": Array [
              "region",
            ],
            "type": "string.polygon",
          },
        ],
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Input validation failed",
      "path": Array [
        "createPinger",
      ],
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
